# worldcup2026mode

./: .gitignore  PRD.md  README.md  pyproject.toml
.github/workflows/: daily.yml
data/: README.md
data/processed/: elo_history.parquet  model.json  model_v2.json  qatar2022_matrices.parquet  qatar2022_predictions.csv  team_match.parquet
data/processed/russia2018/: elo_history.parquet  model.json  russia2018_matrices.parquet  russia2018_predictions.csv  team_match.parquet
data/test/: qatar2022_group_stage.csv  russia2018_group_stage.csv
docs/: index.html
reports/: gap_curve_bins.csv  gap_curve_diagnostic.md  goal_level_experiment.md  odds_integration_decision.md  qatar2022_backtest.md  russia2018_backtest.md  russia2018_xi_tuning.csv  v2_recalibration.md  wc2026_final_summary.md  wc2026_forward_metrics.csv  wc2026_forward_scored.csv  wc2026_predictions.csv  wc2026_scoring_check.md  wc2026_simulation.md  wc2026_upcoming.md  xi_tuning.csv
scripts/: 01_build_data.py  02_fit_model.py  03_run_backtest.py  build_site.py  build_v2_model.py  diag_gap_curve.py  edge_check.py  experiment_goal_level.py  experiment_v2.py  fetch_odds.py  momentum_demo.py  predict_fixtures.py  predict_match.py  report_upcoming.py  run_all.sh  score_forward.py  simulate_matches.py
src/wcmodel/: __init__.py  backtest.py  baselines.py  data.py  elo.py  forward.py  matrix.py  model.py  odds.py
tests/: test_elo.py  test_fetch_odds.py  test_forward.py  test_forward_score.py  test_leakage.py  test_matrix.py  test_metrics.py  test_model.py  test_momentum.py  test_odds.py
