[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wcmodel"
version = "0.1.0"
description = "World Cup exact-score prediction model (Dixon-Coles Poisson matrix)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "statsmodels>=0.13",
    "matplotlib>=3.6",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
